# bmad-aial

./: .env.example  .geminiignore  .gitignore  .pre-commit-config.yaml  IMPLEMENTATION_SPEC.md  Makefile  README.md  commitlint.config.js  enterprise-ai-chatbot-architecture.md  eslint.config.js  eslint.config.mjs  package-lock.json  package.json  pyproject.toml  requirement.txt  semantic.txt
.claude/: run-epic1-batch.sh  settings.json  settings.local.json
_bmad-output/implementation-artifacts/: 1-1-monorepo-scaffold-plus-secrets-baseline.md  1-1b-secrets-baseline.md  (+55 more)
docs/: setup-local.md  system-status.md  user-guide.md
infra/: docker-compose.dev.yml
scripts/: bootstrap-dev-secrets.sh  start-local.ps1  stop-local.ps1
services/app/: Dockerfile  main.py  pyproject.toml  settings.py
services/orchestration/: config_catalog.py  main.py  pyproject.toml
services/orchestration/admin_control/: __init__.py  user_role_management.py
services/orchestration/anomaly_detection/: __init__.py  service.py
services/orchestration/approval/: __init__.py  workflow.py
services/orchestration/audit/: __init__.py  logger.py  read_model.py
services/orchestration/cache/: __init__.py  query_result_cache.py
services/orchestration/cross_domain/: __init__.py  service.py
services/orchestration/explainability/: service.py
services/orchestration/explanation/: __init__.py  generator.py
services/orchestration/exporting/: schedules.py  service.py
services/orchestration/forecasting/: __init__.py  service.py
services/orchestration/graph/: __init__.py  checkpointing.py  graph.py  state.py
services/orchestration/graph/nodes/: __init__.py  stub_response.py
services/orchestration/llm/: __init__.py  answering.py  gemini.py  openai.py  prompting.py
services/orchestration/memory/: __init__.py  long_term.py  session.py
services/orchestration/onboarding/: __init__.py  roles.py
services/orchestration/persistence/: config_catalog_store.py  document_catalog_store.py  local_auth_store.py
services/orchestration/routes/: admin.py  anomaly_detection.py  auth.py  documents.py  drilldown_explainability.py  exports.py  forecast.py  glossary.py  health.py  memory.py  metrics.py  onboarding.py  query.py  scheduled_reports.py  stream.py  trend_analysis.py
services/orchestration/security/: __init__.py  column_masker.py  pii_masker.py
services/orchestration/semantic/: cube_model.py  cube_runtime.py  dsl.py  dsl_validator.py  glossary.py  management.py  query_analyzer.py  renderer.py  resolver.py  sql_execution.py  time_parser.py
services/orchestration/sql_governor/: __init__.py  guardrails.py
services/orchestration/streaming/: __init__.py  events.py  queue.py
services/orchestration/trend_analysis/: __init__.py  service.py
services/rag/: __init__.py  pyproject.toml
services/rag/composition/: __init__.py  nodes.py  rrf.py
services/rag/ingestion/: __init__.py  chunker.py  metadata.py
services/rag/migrations/: __init__.py
services/rag/retrieval/: __init__.py  policy_filter.py  weaviate_filter.py  weaviate_store.py
services/rag/tasks/: __init__.py  ingest.py
shared/: pyproject.toml
shared/src/aial_shared/: __init__.py
shared/src/aial_shared/auth/: __init__.py  cerbos.py  fastapi_deps.py  keycloak.py  local_tokens.py
shared/src/aial_shared/telemetry/: __init__.py  tracer.py
tests/: test_abac_extension.py  test_anomaly_detection.py  test_approval_workflow.py  test_audit_api.py  test_audit_logging.py  test_auth_cerbos.py  test_auth_fastapi_deps.py  test_auth_keycloak.py  test_cerbos_2a7_policy.py  test_column_security.py  test_cube_semantic_runtime.py  test_document_catalog_store.py  test_document_ingestion.py  test_document_management.py  test_drilldown_explainability.py  test_e2e_walking_skeleton.py  test_embedding_client.py  test_export_results.py  test_forecasting.py  test_glossary.py  test_hybrid_composition.py  test_infra_auth_config.py  test_infra_observability_config.py  test_langgraph_stub_graph.py  test_llm_answering.py  test_onboarding.py  test_oracle_execution_2a4.py  test_oracle_vpd_client.py  test_oracle_vpd_smoke.py  test_orchestration_health.py  test_orchestration_query.py  test_pii_masking.py  test_policy_filtering.py  test_query_analyzer.py  test_query_result_cache.py  test_scheduled_reports.py  test_semantic_dynamic_queries.py  test_semantic_inventory_answer.py  test_semantic_memory_5b.py  test_semantic_no_data_answer.py  (+12 more)
(+147 files in other folders)
