[project]
name = "services-orchestration"
version = "0.1.0"
description = "AIAL orchestration service — main chat API"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "httpx>=0.27",
    "opentelemetry-api>=1.20",
    "opentelemetry-sdk>=1.20",
    "opentelemetry-instrumentation-fastapi>=0.42",
    "opentelemetry-exporter-otlp-proto-grpc>=1.20",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
