[project]
name = "rag"
version = "0.1.0"
description = "AIAL RAG service — document ingestion and retrieval"
requires-python = ">=3.12"
dependencies = [
    "requests>=2.32",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
